# dovecot-xexec-2.2

./: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  cmd-xexec.c  xexec-plugin.h  xexec.h  xexec_plugin.c
.deps/: cmd-xexec.Plo  xexec_plugin.Plo
